--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "babel": {
     "presets": [
-      "es2017"
+      "es2015"
     ],
     "plugins": [
       "transform-react-jsx"
@@ -42,6 +42,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
     "npm-watch": "^0.3.0"
   }
