--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      "es2015",
+      "stage-3"
     ],
     "plugins": [
       "transform-react-jsx"
@@ -44,6 +45,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "npm-watch": "^0.3.0"
   }
 }
