--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "url": "https://github.com/eurobob/react-formative/issues"
   },
   "homepage": "https://github.com/eurobob/react-formative#readme",
-  "dependencies": {
+  "peerDependencies": {
     "immutability-helper": "^2.6.6",
     "proptypes": "^1.1.0",
     "react": "^16.2.0",
