--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run build:clean && npm run build:js && npm run build:css",
     "build:clean": "rm -rf lib/*",
     "build:css": "cp src/css/*.css lib",
-    "build:js": "node_modules/babel-cli/bin/babel.js src --out-dir lib",
+    "build:js": "node_modules/@babel/cli/bin/babel.js src --out-dir lib",
     "watch": "npm-watch"
   },
   "watch": {
@@ -22,11 +22,14 @@
   },
   "babel": {
     "presets": [
-      "es2015",
-      "stage-3"
+      "@babel/preset-env"
     ],
     "plugins": [
-      "transform-react-jsx"
+      "@babel/plugin-transform-react-jsx",
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-syntax-import-meta",
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-proposal-json-strings"
     ]
   },
   "repository": {
@@ -41,17 +44,19 @@
   "homepage": "https://github.com/eurobob/react-formative#readme",
   "dependencies": {
     "immutability-helper": "^2.6.6",
-    "react-transition-group": "^2.5.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-transition-group": "^2.5.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-react-jsx": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-json-strings": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-import-meta": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
     "npm-watch": "^0.3.0"
   }
 }
