--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      "@babel/preset-flow"
     ],
     "plugins": [
       "@babel/plugin-transform-react-jsx",
@@ -57,6 +58,8 @@
     "@babel/plugin-syntax-import-meta": "^7.0.0",
     "@babel/plugin-transform-react-jsx": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "flow-bin": "^0.89.0",
     "npm-watch": "^0.3.0"
   }
 }
