--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
     "flow-bin": "^0.89.0",
-    "npm-watch": "^0.3.0"
+    "npm-watch": "^0.3.0",
+    "prettier": "^1.15.3"
   }
 }
