--- a/package.json
+++ b/package.json
@@ -44,6 +44,11 @@
   },
   "homepage": "https://github.com/eurobob/react-formative#readme",
   "dependencies": {
+    "eslint": "^5.11.0",
+    "eslint-config-airbnb": "17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "immutability-helper": "^2.6.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -59,6 +64,8 @@
     "@babel/plugin-transform-react-jsx": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint-plugin-flowtype": "^3.2.0",
     "flow-bin": "^0.89.0",
     "npm-watch": "^0.3.0",
     "prettier": "^1.15.3"
